<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_student"
            android:layout_width="195dp"
            android:layout_height="143dp"
            android:src="@drawable/student_icon"


            tools:visibility="visible" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_photo"
                android:layout_width="52dp"
                android:layout_height="38dp"


                android:layout_marginStart="8dp"


                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/camera_icon"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493"
                tools:visibility="visible" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birth_date_button"
        android:drawableLeft="@drawable/birth_icon"

        />

    <EditText
        android:id="@+id/edit_text_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/dni_text_view"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:text="@string/sex_text"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/male_text" />

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/female_text" />
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/university_text_view"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_career"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/career_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/period_text"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edit_text_gpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gpa_text_view"
        android:inputType="numberDecimal" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_add_student"
            android:layout_width="116dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/add_icon_black"
            android:text="@string/add_student_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.396" />
    </android.support.constraint.ConstraintLayout>



</LinearLayout>



</ScrollView>

